# populate-volatile

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-build.sh  meson.build  populate-volatile.c
.github/workflows/: ci.yml
include/pv/: config.h  ops.h  path.h  trace.h  validate.h
lib/: config.c  ops.c  path.c  validate.c
src/: main.c
tests/: run-ptest  test_bind_mount.c  test_config.c  test_ops.c  test_path.c  test_validate.c
tests/integration/: helpers.sh  test_dirs.sh  test_dryrun.sh  test_files.sh  test_follow_symlink.sh  test_migration.sh  test_ordering.sh  test_symlinks.sh  test_usercheck.sh
